fix: improve header alignment and responsive layout

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -30,7 +30,7 @@
             position: relative;
         z-index: 2;
         overflow: hidden;
-        grid-column: 1 / 9;
+        grid-column: 3 / 9;
         grid-row: 1 / 12;
         padding-bottom: 70px;
         padding-right: 61px;
@@ -40,7 +40,7 @@
   
         position: relative;
         z-index: 2;
-        margin-left: 120px;
+        
         
         
         
